New Features and bugfixes
- Improved backend module
- Password recovery
- (Mail-)Template management
- Some minor bugfixes and improvements

--- a/Resources/Private/Backend/Layouts/List.html
+++ b/Resources/Private/Backend/Layouts/List.html
@@ -16,6 +16,7 @@
 					<f:be.buttons.csh />						
 					<f:be.menus.actionMenu>						
 						<f:be.menus.actionMenuItem label="Frontend-Benutzer" controller="Administration" action="index" />
+						<f:be.menus.actionMenuItem label="Vorlagen" controller="Template" action="index" />
 						<f:comment>
 							<f:be.menus.actionMenuItem label="Import" controller="Import" action="index" />
 						</f:comment>
