--- a/Resources/Private/Backend/Partials/FeUserGroupSelector.html
+++ b/Resources/Private/Backend/Partials/FeUserGroupSelector.html
@@ -29,12 +29,12 @@
 		</f:if>				
 	</div>
 	<div class="feuser-usergroup-selector-actions">
-		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsToTop('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-to-top t3-btn t3-btn-moveoption-top" title="Ausgewählte Objekte zum Anfang verschieben">&nbsp;</span></div>
-		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsOneUp('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-up t3-btn t3-btn-moveoption-up" title="Ausgewählte Objekte nach oben verschieben">&nbsp;</span></div>
-		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsOneDown('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-down t3-btn t3-btn-moveoption-down" title="Ausgewählte Objekte nach unten verschieben">&nbsp;</span></div>
-		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsToBottom('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-to-bottom t3-btn t3-btn-moveoption-bottom" title="Ausgewählte Objekte zum Ende verschieben">&nbsp;</span></div>
-		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersRemoveOptions('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-selection t3-icon-selection-delete t3-btn t3-btn-removeoption" title="Ausgewähltes Objekt löschen">&nbsp;</span></div>
-		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersSetMainUsergroup('#usergroups')" class="t3-icon t3-icon-apps t3-icon-apps-toolbar t3-icon-toolbar-menu-shortcut" title="Ausgewähltes Objekt löschen">&nbsp;</span></div>
+		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsToTop('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-to-top t3-btn t3-btn-moveoption-top" title="Ausgewählte Gruppen zum Anfang verschieben">&nbsp;</span></div>
+		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsOneUp('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-up t3-btn t3-btn-moveoption-up" title="Ausgewählte Gruppen nach oben verschieben">&nbsp;</span></div>
+		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsOneDown('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-down t3-btn t3-btn-moveoption-down" title="Ausgewählte Gruppen nach unten verschieben">&nbsp;</span></div>
+		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersMoveOptionsToBottom('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-move t3-icon-move-to-bottom t3-btn t3-btn-moveoption-bottom" title="Ausgewählte Gruppen zum Ende verschieben">&nbsp;</span></div>
+		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersRemoveOptions('#usergroups')" class="t3-icon t3-icon-actions t3-icon-actions-selection t3-icon-selection-delete t3-btn t3-btn-removeoption" title="Ausgewählte Gruppe entfernen">&nbsp;</span></div>
+		<div class="feuser-usergroup-selector-actions-icon"><span onclick="mooxFeusersSetMainUsergroup('#usergroups')" class="t3-icon t3-icon-apps t3-icon-apps-toolbar t3-icon-toolbar-menu-shortcut" title="Ausgewählte Gruppen als Hauptgruppe festlegen">&nbsp;</span></div>
 	</div>
 	<div class="feuser-usergroup-selector-selector-wrapper">
 		<div class="feuser-usergroup-selector-selector-header">Gruppen-Auswahl</div>
