--- a/Resources/Private/Backend/Templates/Administration/Add.html
+++ b/Resources/Private/Backend/Templates/Administration/Add.html
@@ -149,11 +149,11 @@
 				<f:render partial="FeUserGroupSelector" arguments="{object: object, usergroupSelectionTree: usergroupSelectionTree}" />
 				<div class="clear"></div>
 				<f:if condition="{mailerActive}">
-					<div class="tx-moox-feusers-admin-form-header<f:if condition="{allErrors.disallowedMailing}"> has-error</f:if>">
+					<div class="tx-moox-feusers-admin-form-header<f:if condition="{allErrors.disallowMailing}"> has-error</f:if>">
 						Empfang von Newslettern unterbinden
 					</div>
 					<div class="tx-moox-feusers-admin-form-item">
-						<f:form.checkbox property="disallowedMailing" id="feuser-disallowed-mailing" value="1" />
+						<f:form.checkbox property="disallowMailing" id="feuser-disallow-mailing" value="1" />
 					</div>
 				</f:if>
 				<div class="tx-moox-feusers-admin-form-header<f:if condition="{allErrors.isCompanyAdmin}"> has-error</f:if>">
