--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -86,7 +86,7 @@
 					repeated_character: "]]>{settings.repeatedCharacters}<![CDATA[",
 					sequence_found: "]]>{settings.sequenceFound}<![CDATA["
 				},
-				verdicts: ["Weak", "Normal", "Medium", "Strong", "Very Strong"],
+				verdicts: ["]]>{settings.verdict1}<![CDATA[", "]]>{settings.verdict2}<![CDATA[", "]]>{settings.verdict3}<![CDATA[", "]]>{settings.verdict4}<![CDATA[", "]]>{settings.verdict5}<![CDATA["],
 				showVerdicts: ]]><f:if condition="{settings.showVerdicts}"><f:then>true</f:then><f:else>false</f:else></f:if><![CDATA[,
 				showVerdictsInsideProgressBar: ]]><f:if condition="{settings.showVerdictsInsideProgressBar}"><f:then>true</f:then><f:else>false</f:else></f:if><![CDATA[,
 				showErrors: ]]><f:if condition="{settings.showErrors}"><f:then>true</f:then><f:else>false</f:else></f:if><![CDATA[,
