--- a/Resources/Private/Templates/FrontendUser/Error.html
+++ b/Resources/Private/Templates/FrontendUser/Error.html
@@ -2,9 +2,8 @@
 
 <f:layout name="Default" />
 
-<f:section name="main">
-	
-	<h1>{action}</h1>
+<f:section name="main">	
+	<h1>ERROR</h1>
 	
 	<div class="tx-moox-feusers-frontend-user">
 		
