--- a/Resources/Private/Templates/FrontendUser/List.html
+++ b/Resources/Private/Templates/FrontendUser/List.html
@@ -21,7 +21,7 @@
 						<button type="button" class="btn btn-default active" title="{f:translate(key: 'tx_mooxfeusers_frontenduser.tabs.showusers')}">
 							<span class="glyphicon glyphicon-list"></span> &nbsp;{f:translate(key: 'tx_mooxfeusers_frontenduser.tabs.showusers')}
 						</button>
-						<f:link.action action="create" title="{f:translate(key: 'tx_mooxfeusers_frontenduser.tabs.adduser')}">
+						<f:link.action action="add" title="{f:translate(key: 'tx_mooxfeusers_frontenduser.tabs.adduser')}">
 							<button type="button" class="btn btn-success">
 								<span class="glyphicon glyphicon-plus"></span> &nbsp;{f:translate(key: 'tx_mooxfeusers_frontenduser.tabs.adduser')}
 							</button>
