--- a/Resources/Private/Partials/FrontendUser/UserList.html
+++ b/Resources/Private/Partials/FrontendUser/UserList.html
@@ -8,11 +8,11 @@
 	</div>
 	<div class="panel-body">
 		<div class="table-responsive">
-			<table class="table table-striped">
+			<table class="table table-striped .table-hover">
 				<thead>
 					<tr>
-						<th>{f:translate(key: 'tx_mooxfeusers_frontenduser_action_list.column.name')}</th>
 						<th>{f:translate(key: 'tx_mooxfeusers_frontenduser_action_list.column.username')}</th>
+						<th>{f:translate(key: 'tx_mooxfeusers_frontenduser_action_list.column.name')}</th>						
 						<th>{f:translate(key: 'tx_mooxfeusers_frontenduser_action_list.column.email')}</th>
 						<th style="text-align: right">{f:translate(key: 'tx_mooxfeusers_frontenduser_action_list.column.actions')}</th>
 					</tr>
