--- a/Resources/Private/Backend/Layouts/Import.html
+++ b/Resources/Private/Backend/Layouts/Import.html
@@ -1,14 +1,9 @@
 {namespace v=Tx_Vhs_ViewHelpers}
 
 <v:var.set name="cssFile" value="{f:uri.resource(path:'Css/administration.css')}" />
-<v:var.set name="javascriptFile" value="{f:uri.resource(path:'JavaScript/administration.js')}" />
 
-<f:be.container includeCssFiles="{admincss: cssFile}" includeJsFiles="{adminjs: javascriptFile}" loadJQuery="true" loadPrototype="false">
-	<f:if condition="false">
-	<f:if condition="{javascriptFile}!=''">
-		<script src="{javascriptFile}" type="text/javascript"></script>
-	</f:if>
-	</f:if>	
+<f:be.container includeCssFiles="{admincss: cssFile}" loadExtJsTheme="false" extJsAdapter="jQuery" loadJQuery="true" loadPrototype="false">
+	<script src="{f:uri.resource(path:'JavaScript/administration.js')}" type="text/javascript"></script>
 	<div class="typo3-fullDoc tx-moox-feusers-admin">
 		<div id="typo3-docheader">			
 			<div class="typo3-docheader-functions">				
