--- a/Resources/Private/Backend/Layouts/Templates.html
+++ b/Resources/Private/Backend/Layouts/Templates.html
@@ -1,13 +1,9 @@
 {namespace v=Tx_Vhs_ViewHelpers}
 
 <v:var.set name="cssFile" value="{f:uri.resource(path:'Css/templates.css')}" />
-<v:var.set name="javascriptFile" value="{f:uri.resource(path:'JavaScript/templates.js')}" />
 
-<f:be.container includeCssFiles="{admincss: cssFile}" includeJsFiles="{adminjs: javascriptFile}" loadJQuery="true" loadPrototype="false">
-	<f:if condition="{compatibilityMode}">
-		<script src="{javascriptFile}" type="text/javascript"></script>
-	</f:if>
-	<span id="getUserListAjaxUrl" style="display: none">{f:uri.action(action: 'getUserListAjax')}</span>
+<f:be.container includeCssFiles="{admincss: cssFile}" loadExtJsTheme="false" extJsAdapter="jQuery" loadJQuery="true" loadPrototype="false">
+	<script src="{f:uri.resource(path:'JavaScript/templates.js')}" type="text/javascript"></script>
 	<div class="typo3-fullDoc tx-moox-feusers-admin">
 		<div id="typo3-docheader">			
 			<div class="typo3-docheader-functions">				
