update vhs namespaces

--- a/Resources/Private/Backend/Partials/FeUsersListColums.html
+++ b/Resources/Private/Backend/Partials/FeUsersListColums.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 <f:for each="{fields}" as="field" iteration="iteration">	
 	<v:variable.set name="text" value="" />
 	<v:switch value="{field.name}">
