--- a/Resources/Private/Backend/Partials/FeUsersListHeader.html
+++ b/Resources/Private/Backend/Partials/FeUsersListHeader.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 <th>
 	<v:variable.set name="sortFieldTxt"><f:translate key="listview.{field.name}" default="{field.name}" /></v:variable.set>
 	<v:variable.set name="sortField" value="{field.name}" />
