--- a/Resources/Private/Partials/Mail/Salutation.html
+++ b/Resources/Private/Partials/Mail/Salutation.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 <v:switch value="{gender}">
     <v:case case="1" break="TRUE">
         <v:variable.set name="salutation" value="Sehr geehrter Herr" />
