--- a/Resources/Private/Backend/Layouts/Form.html
+++ b/Resources/Private/Backend/Layouts/Form.html
@@ -1,6 +1,6 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 
-<v:var.set name="cssFile" value="{f:uri.resource(path:'Css/administration.css')}" />
+<v:variable.set name="cssFile" value="{f:uri.resource(path:'Css/administration.css')}" />
 
 <f:be.container includeCssFiles="{admincss: cssFile}" loadExtJsTheme="false" extJsAdapter="jQuery" loadJQuery="true" loadPrototype="false">
 	<script src="{f:uri.resource(path:'JavaScript/administration.js')}" type="text/javascript"></script>
