--- a/Resources/Private/Backend/Partials/FeUserDetails.html
+++ b/Resources/Private/Backend/Partials/FeUserDetails.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 
 <div class="feuser-details-content">										
 	<div class="feuser-details-content-inner">
