--- a/Resources/Private/Backend/Partials/FeUserGroupSelector.html
+++ b/Resources/Private/Backend/Partials/FeUserGroupSelector.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 
 <div class="feuser-usergroup-selector">
 	<div class="feuser-usergroup-selector-display-wrapper">
