--- a/Resources/Private/Backend/Partials/FeUsersList.html
+++ b/Resources/Private/Backend/Partials/FeUsersList.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 
 <tbody>
 	<f:for each="{feUsers}" as="item" iteration="iteration">
