--- a/Resources/Private/Backend/Partials/TemplatesList.html
+++ b/Resources/Private/Backend/Partials/TemplatesList.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 
 <tbody>
 	<f:for each="{templates}" as="item" iteration="iteration">
