--- a/Resources/Private/Partials/FrontendUser/UserList.html
+++ b/Resources/Private/Partials/FrontendUser/UserList.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 
 <div class="panel panel-default">
 	<div class="panel-heading">
