--- a/Resources/Private/Partials/FrontendUser/UserListItem.html
+++ b/Resources/Private/Partials/FrontendUser/UserListItem.html
@@ -1,4 +1,4 @@
-{namespace v=Tx_Vhs_ViewHelpers}
+{namespace v=FluidTYPO3\Vhs\ViewHelpers}
 <tr>
 	<td>{companyUser.username}</td>
 	<td>{companyUser.name}</td>	
